--- a/report/references.bib
+++ b/report/references.bib
@@ -1,36 +1,37 @@
 @Inbook{Castellano2008,
-  author="Castellano, Ginevra
+    author="Castellano, Ginevra
 and Kessous, Loic
 and Caridakis, George",
-  editor="Peter, Christian
+    editor="Peter, Christian
 and Beale, Russell",
-  title="Emotion Recognition through Multiple Modalities: Face, Body Gesture, Speech",
-  bookTitle="Affect and Emotion in Human-Computer Interaction: From Theory to Applications",
-  year="2008",
-  publisher="Springer Berlin Heidelberg",
-  address="Berlin, Heidelberg",
-  pages="92--103",
-  abstract="In this paper we present a multimodal approach for the recognition of eight emotions. Our approach integrates information from facial expressions, body movement and gestures and speech. We trained and tested a model with a Bayesian classifier, using a multimodal corpus with eight emotions and ten subjects. Firstly, individual classifiers were trained for each modality. Next, data were fused at the feature level and the decision level. Fusing the multimodal data resulted in a large increase in the recognition rates in comparison with the unimodal systems: the multimodal approach gave an improvement of more than 10{\%} when compared to the most successful unimodal system. Further, the fusion performed at the feature level provided better results than the one performed at the decision level.",
-  isbn="978-3-540-85099-1",
-  doi="10.1007/978-3-540-85099-1_8",
-  url="https://doi.org/10.1007/978-3-540-85099-1_8"
+    title="Emotion Recognition through Multiple Modalities: Face, Body Gesture, Speech",
+    bookTitle="Affect and Emotion in Human-Computer Interaction: From Theory to Applications",
+    year="2008",
+    publisher="Springer Berlin Heidelberg",
+    address="Berlin, Heidelberg",
+    pages="92--103",
+    abstract="In this paper we present a multimodal approach for the recognition of eight emotions. Our approach integrates information from facial expressions, body movement and gestures and speech. We trained and tested a model with a Bayesian classifier, using a multimodal corpus with eight emotions and ten subjects. Firstly, individual classifiers were trained for each modality. Next, data were fused at the feature level and the decision level. Fusing the multimodal data resulted in a large increase in the recognition rates in comparison with the unimodal systems: the multimodal approach gave an improvement of more than 10{\%} when compared to the most successful unimodal system. Further, the fusion performed at the feature level provided better results than the one performed at the decision level.",
+    isbn="978-3-540-85099-1",
+    doi="10.1007/978-3-540-85099-1_8",
+    url="https://doi.org/10.1007/978-3-540-85099-1_8"
 }
 
 
+
 @article{CHEN2013175,
-  title = "Recognizing expressions from face and body gesture by temporal normalized motion and appearance features",
-  journal = "Image and Vision Computing",
-  volume = "31",
-  number = "2",
-  pages = "175 - 185",
-  year = "2013",
-  note = "Affect Analysis In Continuous Input",
-  issn = "0262-8856",
-  doi = "https://doi.org/10.1016/j.imavis.2012.06.014",
-  url = "http://www.sciencedirect.com/science/article/pii/S0262885612001023",
-  author = "Shizhi Chen and YingLi Tian and Qingshan Liu and Dimitris N. Metaxas",
-  keywords = "Affect recognition, Facial feature, Body gesture, MHI-HOG, Image-HOG",
-  abstract = "Recently, recognizing affects from both face and body gestures attracts more attentions. However, it still lacks of efficient and effective features to describe the dynamics of face and gestures for real-time automatic affect recognition. In this paper, we combine both local motion and appearance feature in a novel framework to model the temporal dynamics of face and body gesture. The proposed framework employs MHI-HOG and Image-HOG features through temporal normalization or bag of words to capture motion and appearance information. The MHI-HOG stands for Histogram of Oriented Gradients (HOG) on the Motion History Image (MHI). It captures motion direction and speed of a region of interest as an expression evolves over the time. The Image-HOG captures the appearance information of the corresponding region of interest. The temporal normalization method explicitly solves the time resolution issue in the video-based affect recognition. To implicitly model local temporal dynamics of an expression, we further propose a bag of words (BOW) based representation for both MHI-HOG and Image-HOG features. Experimental results demonstrate promising performance as compared with the state-of-the-art. Significant improvement of recognition accuracy is achieved as compared with the frame-based approach that does not consider the underlying temporal dynamics."
+    title = "Recognizing expressions from face and body gesture by temporal normalized motion and appearance features",
+    journal = "Image and Vision Computing",
+    volume = "31",
+    number = "2",
+    pages = "175 - 185",
+    year = "2013",
+    note = "Affect Analysis In Continuous Input",
+    issn = "0262-8856",
+    doi = "https://doi.org/10.1016/j.imavis.2012.06.014",
+    url = "http://www.sciencedirect.com/science/article/pii/S0262885612001023",
+    author = "Shizhi Chen and YingLi Tian and Qingshan Liu and Dimitris N. Metaxas",
+    keywords = "Affect recognition, Facial feature, Body gesture, MHI-HOG, Image-HOG",
+    abstract = "Recently, recognizing affects from both face and body gestures attracts more attentions. However, it still lacks of efficient and effective features to describe the dynamics of face and gestures for real-time automatic affect recognition. In this paper, we combine both local motion and appearance feature in a novel framework to model the temporal dynamics of face and body gesture. The proposed framework employs MHI-HOG and Image-HOG features through temporal normalization or bag of words to capture motion and appearance information. The MHI-HOG stands for Histogram of Oriented Gradients (HOG) on the Motion History Image (MHI). It captures motion direction and speed of a region of interest as an expression evolves over the time. The Image-HOG captures the appearance information of the corresponding region of interest. The temporal normalization method explicitly solves the time resolution issue in the video-based affect recognition. To implicitly model local temporal dynamics of an expression, we further propose a bag of words (BOW) based representation for both MHI-HOG and Image-HOG features. Experimental results demonstrate promising performance as compared with the state-of-the-art. Significant improvement of recognition accuracy is achieved as compared with the frame-based approach that does not consider the underlying temporal dynamics."
 }
 
 
@@ -238,4 +239,324 @@ publisher={IEEE},
 author={Sandler, Mark and Howard, Andrew and Zhu, Menglong and Zhmoginov, Andrey and Chen, Liang-Chieh},
 year={2018},
 month={Jun}
+}
+
+@inproceedings{45381,
+title	= {TensorFlow: A system for large-scale machine learning},
+author	= {Martin Abadi and Paul Barham and Jianmin Chen and Zhifeng Chen and Andy Davis and Jeffrey Dean and Matthieu Devin and Sanjay Ghemawat and Geoffrey Irving and Michael Isard and Manjunath Kudlur and Josh Levenberg and Rajat Monga and Sherry Moore and Derek G. Murray and Benoit Steiner and Paul Tucker and Vijay Vasudevan and Pete Warden and Martin Wicke and Yuan Yu and Xiaoqiang Zheng},
+year	= {2016},
+URL	= {https://www.usenix.org/system/files/conference/osdi16/osdi16-abadi.pdf},
+booktitle	= {12th USENIX Symposium on Operating Systems Design and Implementation (OSDI 16)},
+pages	= {265--283}
+}
+
+
+@article{DBLP:journals/corr/BuitinckLBPMGNPGGLVJHV13,
+author    = {Lars Buitinck and
+               Gilles Louppe and
+               Mathieu Blondel and
+               Fabian Pedregosa and
+               Andreas Mueller and
+               Olivier Grisel and
+               Vlad Niculae and
+               Peter Prettenhofer and
+               Alexandre Gramfort and
+               Jaques Grobler and
+               Robert Layton and
+               Jake VanderPlas and
+               Arnaud Joly and
+               Brian Holt and
+               Ga{\"{e}}l Varoquaux},
+title     = {{API} design for machine learning software: experiences from the scikit-learn
+               project},
+journal   = {CoRR},
+volume    = {abs/1309.0238},
+year      = {2013},
+url       = {http://arxiv.org/abs/1309.0238},
+archivePrefix = {arXiv},
+eprint    = {1309.0238},
+timestamp = {Mon, 13 Aug 2018 16:49:16 +0200},
+biburl    = {https://dblp.org/rec/bib/journals/corr/BuitinckLBPMGNPGGLVJHV13},
+bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@Article{Wang2019,
+author="Wang, Zhaobin
+and Liu, Ke
+and Li, Jian
+and Zhu, Ying
+and Zhang, Yaonan",
+title="Various Frameworks and Libraries of Machine Learning and Deep Learning: A Survey",
+journal="Archives of Computational Methods in Engineering",
+year="2019",
+month="Feb",
+day="01",
+abstract="With the rapid development of deep learning in various fields, the big companies and research teams have developed independent and unique tools. This paper collects 18 common deep learning frameworks and libraries (Caffe, Caffe2, Tensorflow, Theano include Keras Lasagnes and Blocks, MXNet, CNTK, Torch, PyTorch, Pylearn2, Scikit-learn, Matlab include MatconvNet Matlab deep learning and Deep learning tool box, Chainer, Deeplearning4j) and introduces a large number of benchmarking data. In addition, we give the overall score of the current eight mainstream deep learning frameworks from six aspects (model design ability, interface property, deployment ability, performance, framework design and prospects for development). Based on our overview, the deep learning researchers can choose the appropriate development tools according to the evaluation criteria. By summarizing the 18 deep learning frameworks and libraries, we have found that most of the deep learning tools are moving closer to the mobile terminal, and the role of ASICs is gradually emerging. It is believed that the future deep learning applications will be inseparable from the ASIC support.",
+issn="1886-1784",
+doi="10.1007/s11831-018-09312-w",
+url="https://doi.org/10.1007/s11831-018-09312-w"
+}
+
+@Article{Nguyen2019,
+author="Nguyen, Giang
+and Dlugolinsky, Stefan
+and Bob{\'a}k, Martin
+and Tran, Viet
+and L{\'o}pez Garc{\'i}a, {\'A}lvaro
+and Heredia, Ignacio
+and Mal{\'i}k, Peter
+and Hluch{\'y}, Ladislav",
+title="Machine Learning and Deep Learning frameworks and libraries for large-scale data mining: a survey",
+journal="Artificial Intelligence Review",
+year="2019",
+month="Jun",
+day="01",
+volume="52",
+number="1",
+pages="77--124",
+abstract="The combined impact of new computing resources and techniques with an increasing avalanche of large datasets, is transforming many research areas and may lead to technological breakthroughs that can be used by billions of people. In the recent years, Machine Learning and especially its subfield Deep Learning have seen impressive advances. Techniques developed within these two fields are now able to analyze and learn from huge amounts of real world examples in a disparate formats. While the number of Machine Learning algorithms is extensive and growing, their implementations through frameworks and libraries is also extensive and growing too. The software development in this field is fast paced with a large number of open-source software coming from the academy, industry, start-ups or wider open-source communities. This survey presents a recent time-slide comprehensive overview with comparisons as well as trends in development and usage of cutting-edge Artificial Intelligence software. It also provides an overview of massive parallelism support that is capable of scaling computation effectively and efficiently in the era of Big Data.",
+issn="1573-7462",
+doi="10.1007/s10462-018-09679-z",
+url="https://doi.org/10.1007/s10462-018-09679-z"
+}
+
+@misc{goldsborough2016tour,
+title={A Tour of TensorFlow},
+author={Peter Goldsborough},
+year={2016},
+eprint={1610.01178},
+archivePrefix={arXiv},
+primaryClass={cs.LG}
+}
+
+@misc{schrimpf2016i,
+title={Should I use TensorFlow},
+author={Martin Schrimpf},
+year={2016},
+eprint={1611.08903},
+archivePrefix={arXiv},
+primaryClass={cs.LG}
+}
+
+@article{doi:10.1162neco_a_00990,
+author = {Rawat, Waseem and Wang, Zenghui},
+title = {Deep Convolutional Neural Networks for Image Classification: A Comprehensive Review},
+journal = {Neural Computation},
+volume = {29},
+number = {9},
+pages = {2352-2449},
+year = {2017},
+doi = {10.1162/neco\_a\_00990},
+note ={PMID: 28599112},
+
+URL = {
+https://doi.org/10.1162/neco_a_00990
+
+},
+eprint = {
+https://doi.org/10.1162/neco_a_00990
+
+}
+,
+abstract = { Convolutional neural networks (CNNs) have been applied to visual tasks since the late 1980s. However, despite a few scattered applications, they were dormant until the mid-2000s when developments in computing power and the advent of large amounts of labeled data, supplemented by improved algorithms, contributed to their advancement and brought them to the forefront of a neural network renaissance that has seen rapid progression since 2012. In this review, which focuses on the application of CNNs to image classification tasks, we cover their development, from their predecessors up to recent state-of-the-art deep learning systems. Along the way, we analyze (1) their early successes, (2) their role in the deep learning renaissance, (3) selected symbolic works that have contributed to their recent popularity, and (4) several improvement attempts by reviewing contributions and challenges of over 300 publications. We also introduce some of their current trends and remaining challenges. }
+}
+
+@article{TomeD2016DCNN,
+journal = {Signal Processing: Image Communication , 47 pp. 482-489. (2016)},
+year = {2016},
+title = {Deep Convolutional Neural Networks for pedestrian detection},
+copyright = {open},
+language = {eng},
+author = {Tomè, D and Monti, F and Baroffio, L and Bondi, L and Tagliasacchi, M and Tubaro, S},
+keywords = {Deep learning; Pedestrian detection; Convolutional Neural Networks; Optimization},
+}
+
+@article{PramerdorferChristopher2016FERu,
+abstract = {The ability to recognize facial expressions automatically enables novel applications in human-computer interaction and other areas. Consequently, there has been active research in this field, with several recent works utilizing Convolutional Neural Networks (CNNs) for feature extraction and inference. These works differ significantly in terms of CNN architectures and other factors. Based on the reported results alone, the performance impact of these factors is unclear. In this paper, we review the state of the art in image-based facial expression recognition using CNNs and highlight algorithmic differences and their performance impact. On this basis, we identify existing bottlenecks and consequently directions for advancing this research field. Furthermore, we demonstrate that overcoming one of these bottlenecks - the comparatively basic architectures of the CNNs utilized in this field - leads to a substantial performance increase. By forming an ensemble of modern deep CNNs, we obtain a FER2013 test accuracy of 75.2%, outperforming previous works without requiring auxiliary training data or face registration.},
+year = {2016},
+title = {Facial Expression Recognition using Convolutional Neural Networks: State of the Art},
+author = {Pramerdorfer, Christopher and Kampel, Martin},
+keywords = {Computer Science - Computer Vision And Pattern Recognition},
+}
+
+@article{Abdel-HamidOssama2014CNNf,
+issn = {2329-9290},
+abstract = {<p>Recently, the hybrid deep neural network (DNN)-hidden Markov model (HMM) has been shown to significantly improve speech recognition performance over the conventional Gaussian mixture model (GMM)-HMM. The performance improvement is partially attributed to the ability of the DNN to model complex correlations in speech features. In this paper, we show that further error rate reduction can be obtained by using convolutional neural networks (CNNs). We first present a concise description of the basic CNN and explain how it can be used for speech recognition. We further propose a limited-weight-sharing scheme that can better model speech features. The special structure such as local connectivity, weight sharing, and pooling in CNNs exhibits some degree of invariance to small shifts of speech features along the frequency axis, which is important to deal with speaker and environment variations. Experimental results show that CNNs reduce the error rate by 6%-10% compared with DNNs on the TIMIT phone recognition and the voice search large vocabulary speech recognition tasks.</p>},
+journal = {IEEE/ACM Transactions on Audio, Speech, and Language Processing},
+pages = {1533--1545},
+volume = {22},
+publisher = {IEEE},
+number = {10},
+year = {2014},
+title = {Convolutional Neural Networks for Speech Recognition},
+language = {eng},
+author = {Abdel-Hamid, Ossama and Mohamed, Abdel-Rahman and Hui Jiang and Li Deng and Penn, Gerald and Dong Yu},
+keywords = {Convolution ; Hidden Markov Models ; Speech ; Speech Recognition ; Vectors ; Neural Networks ; Training ; Convolution ; Convolutional Neural Networks ; Limited Weight Sharing (Lws) Scheme ; Pooling ; Engineering},
+}
+
+@article{Szegedy_2016,
+title={Rethinking the Inception Architecture for Computer Vision},
+ISBN={9781467388511},
+url={http://dx.doi.org/10.1109/CVPR.2016.308},
+DOI={10.1109/cvpr.2016.308},
+journal={2016 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+publisher={IEEE},
+author={Szegedy, Christian and Vanhoucke, Vincent and Ioffe, Sergey and Shlens, Jon and Wojna, Zbigniew},
+year={2016},
+month={Jun}
+}
+
+
+@InProceedings{10.1007978-3-642-28493-9_34,
+author="Duong, Dinh
+and Dinh, Thang Ba
+and Dinh, Tien
+and Duong, Duc",
+editor="Pan, Jeng-Shyang
+and Chen, Shyi-Ming
+and Nguyen, Ngoc Thanh",
+title="Sports Video Classification Using Bag of Words Model",
+booktitle="Intelligent Information and Database Systems",
+year="2012",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="316--325",
+abstract="We propose a novel approach classify different sports videos given their groups. First, the SURF descriptors in each key frames are extracted. Then they are used to form the visual word vocabulary (codebook) by using K-Means clustering algorithm. After that, the histogram of these visual words are computed and considered as a feature vector. Finally, we use SVM to train each classifier for each category. The classification result of the video is the production of the scores output from all of the key frames. An extensive experiment is performed on a diverse and challenging dataset of 600 sports video clips downloaded from Youtube with a total of more than 6000 minutes in length for 10 different kinds of sports.",
+isbn="978-3-642-28493-9"
+}
+
+@Article{Uijlings2015,
+author="Uijlings, J.
+and Duta, I. C.
+and Sangineto, E.
+and Sebe, Nicu",
+title="Video classification with Densely extracted HOG/HOF/MBH features: an evaluation of the accuracy/computational efficiency trade-off",
+journal="International Journal of Multimedia Information Retrieval",
+year="2015",
+month="Mar",
+day="01",
+volume="4",
+number="1",
+pages="33--44",
+abstract="The current state-of-the-art in video classification is based on Bag-of-Words using local visual descriptors. Most commonly these are histogram of oriented gradients (HOG), histogram of optical flow (HOF) and motion boundary histograms (MBH) descriptors. While such approach is very powerful for classification, it is also computationally expensive. This paper addresses the problem of computational efficiency. Specifically: (1) We propose several speed-ups for densely sampled HOG, HOF and MBH descriptors and release Matlab code; (2) We investigate the trade-off between accuracy and computational efficiency of descriptors in terms of frame sampling rate and type of Optical Flow method; (3) We investigate the trade-off between accuracy and computational efficiency for computing the feature vocabulary, using and comparing most of the commonly adopted vector quantization techniques: {\$}{\$}k{\$}{\$}k-means, hierarchical {\$}{\$}k{\$}{\$}k-means, Random Forests, Fisher Vectors and VLAD.",
+issn="2192-662X",
+doi="10.1007/s13735-014-0069-5",
+url="https://doi.org/10.1007/s13735-014-0069-5"
+}
+
+
+@misc{yang2017tensortrain,
+title={Tensor-Train Recurrent Neural Networks for Video Classification},
+author={Yinchong Yang and Denis Krompass and Volker Tresp},
+year={2017},
+eprint={1707.01786},
+archivePrefix={arXiv},
+primaryClass={cs.CV}
+}
+
+@article{Randles_2017,
+title={Using the Jupyter Notebook as a Tool for Open Science: An Empirical Study},
+ISBN={9781538638613},
+url={http://dx.doi.org/10.1109/jcdl.2017.7991618},
+DOI={10.1109/jcdl.2017.7991618},
+journal={2017 ACM/IEEE Joint Conference on Digital Libraries (JCDL)},
+publisher={IEEE},
+author={Randles, Bernadette M. and Pasquetto, Irene V. and Golshan, Milena S. and Borgman, Christine L.},
+year={2017},
+month={Jun}
+}
+
+@inproceedings{45619,
+title	= {YouTube-8M: A Large-Scale Video Classification Benchmark},
+author	= {Sami Abu-El-Haija and Nisarg Kothari and Joonseok Lee and Apostol (Paul) Natsev and George Toderici and Balakrishnan Varadarajan and Sudheendra Vijayanarasimhan},
+year	= {2016},
+URL	= {https://arxiv.org/pdf/1609.08675v1.pdf},
+booktitle	= {arXiv:1609.08675}
+}
+
+@inproceedings{45619,
+title	= {YouTube-8M: A Large-Scale Video Classification Benchmark},
+author	= {Sami Abu-El-Haija and Nisarg Kothari and Joonseok Lee and Apostol (Paul) Natsev and George Toderici and Balakrishnan Varadarajan and Sudheendra Vijayanarasimhan},
+year	= {2016},
+URL	= {https://arxiv.org/pdf/1609.08675v1.pdf},
+booktitle	= {arXiv:1609.08675}
+}
+
+@article{Lux:2019:OSC:3310195.3310202,
+author = {Lux, Mathias and Bertini, Marco},
+title = {Open Source Column: Deep Learning with Keras},
+journal = {SIGMultimedia Rec.},
+issue_date = {December 2018},
+volume = {10},
+number = {4},
+month = jan,
+year = {2019},
+issn = {1947-4598},
+pages = {7:7--7:7},
+articleno = {7},
+numpages = {1},
+url = {http://doi.acm.org/10.1145/3310195.3310202},
+doi = {10.1145/3310195.3310202},
+acmid = {3310202},
+publisher = {ACM},
+address = {New York, NY, USA},
+}
+
+
+@misc{wang2019benchmarking,
+title={Benchmarking TPU, GPU, and CPU Platforms for Deep Learning},
+author={Yu Emma Wang and Gu-Yeon Wei and David Brooks},
+year={2019},
+eprint={1907.10701},
+archivePrefix={arXiv},
+primaryClass={cs.LG}
+}
+
+
+@article{ChadhaA2017VCWC,
+journal = {IEEE Transactions on Circuits and Systems for Video Technology (2017) (In press).},
+year = {2017},
+title = {Video Classification With CNNs: Using The Codec As A Spatio-Temporal Activity Sensor},
+copyright = {open},
+language = {eng},
+author = {Chadha, A and Abbas, A and Andreopoulos, Y},
+keywords = {video coding;  classification;  deep learning;  Computer architecture;  Decoding;  Three-dimensional displays;  Two dimensional displays;  Training;  Complexity theory},
+}
+
+
+
+@book{Goodfellow-et-al-2016,
+title={Deep Learning},
+author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+publisher={MIT Press},
+note={\url{http://www.deeplearningbook.org}},
+year={2016}
+}
+
+@misc{howard2017mobilenets,
+title={MobileNets: Efficient Convolutional Neural Networks for Mobile Vision Applications},
+author={Andrew G. Howard and Menglong Zhu and Bo Chen and Dmitry Kalenichenko and Weijun Wang and Tobias Weyand and Marco Andreetto and Hartwig Adam},
+year={2017},
+eprint={1704.04861},
+archivePrefix={arXiv},
+primaryClass={cs.CV}
+}
+
+@misc{kingma2014adam,
+title={Adam: A Method for Stochastic Optimization},
+author={Diederik P. Kingma and Jimmy Ba},
+year={2014},
+eprint={1412.6980},
+archivePrefix={arXiv},
+primaryClass={cs.LG}
+}
+
+@misc{ruder2016overview,
+title={An overview of gradient descent optimization algorithms},
+author={Sebastian Ruder},
+year={2016},
+eprint={1609.04747},
+archivePrefix={arXiv},
+primaryClass={cs.LG}
 }
