--- a/report/main.tex
+++ b/report/main.tex
@@ -163,6 +163,8 @@ tabsize=2
         ucf101_train , ucf101_test = ucf101_dataset["train"], ucf101_dataset["test"]
     \end{lstlisting}
 
+    % todo talk about batches and shuffling
+
     Custom python helper methods where used for the formatting of the images in the frame from $256 \times 256 \times 3$ to $170 \times170 \times 3$ as suggested in \citep{KarpathyCVPR14}. Most layers needed to build the model where present in the keras API. Most models where implemented using the keras sequential model which is the simplest model to implement as it is a simply a linear stack of layers as seen below. The single frame layer for example was implemented as a keras sequential model by passing in a list of layers as seen in \ref{singleFrame} note that this can also be implemented by using the the keras API add method to add in layers. More complex architectures such as the slow fusion layer used the keras functional API which uses the fact that a layers is a callable instance that can be called on a tensor and then returns a tensor to build multi-output and multi-input models like the slow and late fusion model.
 
     \begin{lstlisting}[language=Python, caption=Single Frame model implemetation, label=singleFrame]
@@ -277,39 +279,70 @@ tabsize=2
 
 
     \section{Results}
-    The table below shows the performance of the models using both batch normalization and local response normalization running on a node containing two GPUs. From the table below it is clear to see batch normalization is superior
-    \begin{center}
-        % \caption{My Table}
-        \begin{tabular}{ |c|c|c|c| }
+    The table \ref{lrnvsbatch} shows the performance of the models using both batch normalization and local response normalization running on a node containing two GPUs. From the table below it is clear to see batch normalization is superior
+    \begin{table}[h!]
+        \begin{center}
+            \begin{tabular}{ |l|c|c|c| }
+                \hline
+                model & epoch & accuracy & loss \\
+                \hline
+                single frame LRN & 10 & 0.0479 & 4.2867 \\
+                single frame batch  & 10 & 0.9158 & 0.3518 \\
+                early fusion LRN & 10 & 0.0893 & 3.9725 \\
+                early fusion batch & 10 & 0.9467 &  0.2447  \\
+                late fusion LRN & 10 &  &  \\
+                late fusion batch & 10 &  & \\
+                slow fusion LRN & 10 &  &  \\
+                slow fusion batch & 10 &  &  \\
+                \hline
+            \end{tabular}
+            \caption{Batch vs LRN normalization}
+            \label{lrnvsbatch}
+        \end{center}
+    \end{table}
 
-            \hline
-            model & epoch & accuracy & loss \\
-            single frame LRN & 10 & 0.0479 & 4.2867 \\
-            single frame batch  & 10 & 0.9158 & 0.3518 \\
-            early fusion LRN & 10 & 0.0893 & 3.9725 \\
-            early fusion batch & 10 & 0.9467 &  0.2447  \\
-            late fusion LRN & 10 &  &  \\
-            late fusion batch & 10 &  & \\
-            slow fusion LRN & 10 &  &  \\
-            slow fusion batch & 10 &  &  \\
-            \hline
-        \end{tabular}
-        \label{lrnvsbatc}
-    \end{center}
+    Table \ref{fusions} looks to compare the batch normalization particularly comparing those with different temporal relationships.
+    % todo compsre with paper results
 
-    The table below also
+    \begin{table}[h!]
+        \begin{center}
+            \begin{tabular}{ |l|c|c|c| }
+                \hline
+                model & epoch &accuracy & loss \\
+                \hline
+                single frame batch  & 20   & 0.236 & 6.338 \\
+                early fusion batch  & 20 & 0.2437 &  6.475  \\
+                late fusion batch   & 10 &  & \\
+                slow fusion batch   & 10 &  &  \\
+                \hline
+            \end{tabular}
+            \caption{ Performance on test dataset by models with different temporal relastionships}
+            \label{fusions}
+        \end{center}
+    \end{table}
 
-    \begin{center}
-        \begin{tabular}{ |c|c|c|c| }
-            \hline
-            model & epoch &accuracy & loss \\
-            single frame batch  & 20   & 0.236 & 6.338 \\
-            early fusion batch  & 20 & 0.2437 &  6.475  \\
-            late fusion batch   & 10 &  & \\
-            slow fusion batch   & 10 & cell8 & cell9 \\
-            \hline
-        \end{tabular}
-    \end{center}
+    The table below compares the performance of models using pretrained models as a base model over 1 epoch and 50\% dropout
+
+    % todo add column for validation on one epoch
+    \begin{table}[h!]
+        \begin{center}
+            \begin{tabular}{ |l|c|c|c| }
+                \hline
+                model & epoch & accuracy & loss \\
+                \hline
+                ResNet & 1 & 0.0106  & 238.3496   \\
+                Inception & 1 & 0.0106 & 235.1907 \\
+                MobileNetv2 & 1 & 0.0106  &  238.1989  \\
+                VGG19 & 1 & 0.0106 &  229.1289  \\
+                \hline
+            \end{tabular}
+            \caption{Pretrained models 1 epooch results}
+            \label{pretrained}
+        \end{center}
+    \end{table}
+
+    One interesting to note from table \ref{pretrained} is that the accuracy of all the models after the first epoch are the same but the loss are sliglty differnt.
+
 
 
     \section{Conclusion}
